Fixes #150 - quantity box visibility. PartsGrid cuts off larger quantity values because it's inline-editable. Adjusted width and padding Fixes some translation issues

--- a/Binner/Binner.Web/ClientApp/src/components/PartsGrid.css
+++ b/Binner/Binner.Web/ClientApp/src/components/PartsGrid.css
@@ -2,6 +2,10 @@
 	background-color: rgb(179, 218, 255);
 }
 
+#partsGrid td {
+	vertical-align: middle;
+}
+
 .ui.selectable.table tbody tr.selected:hover {
 	background-color: rgb(63, 160, 250) !important;
 }
