--- a/Binner/Binner.Web/ClientApp/src/custom.css
+++ b/Binner/Binner.Web/ClientApp/src/custom.css
@@ -158,6 +158,14 @@ section.formHeader {
 }
 
 
+.fixed60 {
+    width: 60px;
+}
+
+.fixed75 {
+    width: 75px;
+}
+
 .fixed100 {
     width: 100px;
 }
@@ -516,12 +524,23 @@ section.formHeader {
 }
 
 .page-notice {
+	font-size: 0.9em;
     background-color: #fcf7c9;
     padding: 2px 10px;
     border: 1px dotted #bec07b;
     font-weight: 400;
     box-shadow: 0 2px 2px 0 rgb(34 36 38 / 15%);
     cursor: pointer;
+	width: 100%;
+	max-height: 28px;
+}
+
+.page-notice div {
+	max-width: 100%;
+	max-height: 28px;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
 }
 
 .page-error {
@@ -532,6 +551,16 @@ section.formHeader {
     font-weight: 400;
     box-shadow: 0 2px 2px 0 rgb(34 36 38 / 15%);
     cursor: pointer;
+	width: 100%;
+	max-height: 28px;
+}
+
+.page-error div {
+	max-width: 100%;
+	max-height: 28px;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
 }
 
 .version-banner {
